--- a/main.html
+++ b/main.html
@@ -8,7 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<nav>
+		First Paragraph
+	</nav>
+	<div>	
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+		sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	</p>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+		do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	</p>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+		do eiusmod tempor incididunt ut labore et dolore magna aliqua
+	</p>
+	</div>
+	<div>
+	<ul>
+      <li>First Item</li>
+		<li>Second Item</li>
+		<li>Third Item</li>
+		<li>Fourth Item</li>
+		<li>Fifth Item</li>
+	</ul>
+	</div>	
+<script type="text/javascript" src="./script.js">			
 </script>
 
 </body>
